@@ -1,3 +1,15 @@
+2013-03-08  Guillaume Lazzara  <z@lrde.epita.fr>
+
+	Improve documentation layout.
+
+	* doc/Doxyfile.in: Enable some options.
+
+	* doc/DoxygenLayout.xml: Change menu.
+
+	* doc/Makefile.am: Do not use relative paths.
+
+	* doc/doxyfuns.sty: Improve latex rendering.
+
 2012-02-28  Guillaume Lazzara  <z@lrde.epita.fr>
 
 	* doc/Makefile.am: Disable the use of installdox and fix doc
